1.2.2
-----

- *BUGFIX*: Correctly handle student progress on modules
- *BUGFIX*: Correctly handle parts with an empty content (#67)
- *BUGFIX*: Allow editing a module that has been archived (#65)
- *BUGFIX*: Line blocks now have the same styling as a paragraph (#73)

1.2.1
-----

- *BUGFIX*: Handle student progress where nothing has been visited

1.2.0
-----

- *NEW*: Added functionality to add pages / tasks before or after the
  current page / task
- *NEW*: Automatically center the part preview on the current cursor
  location
- *NEW*: Implement outline list numbering (#28)
- *NEW*: In the three-pane HTML editor layout, use AJAX to load tutorial
  pages
- *NEW*: Enable line-numbers in code blocks (#63)
- *NEW*: Keyboard shortcuts in the part editor (#61)
- *NEW*: Enable/disable line-wrapping in the part editor (#42)
- *NEW*: New UI for adding assets and parts in the part editor (#38)
- *NEW*: Parts can now be labelled
- *NEW*: Add assets directly in the part editor (#64)
- *NEW*: Compatible with both Python 2.7 and Python 3.5
- *NEW*: Re-worked the registration and forgotten password to use random tokens
- *NEW*: Support for quizzes
- *NEW*: Support for capturing time spent on pages (#31)
- *NEW*: Automatic linking between editor and preview (#29)
- *NEW*: Added text blocks that can be shown and hidden (#8)
- *UPDATE*: Use Kajiki as the rendering engine (#49)
- *UPDATE*: Improve caching of permission lookups (#49)
- *UPDATE*: The :asset: directive now automatically searches in all parent parts
- *UPDATE*: Simplified part structure: module, part, page
- *UPDATE*: Show an error message if the part content is broken (#62)
- *UPDATE*: Pages now also have an available/not-available status (#58)
- *UPDATE*: Timed actions are now available for pages (#58)
- *UPDATE*: No-select can now also be specified as a sourcecode option

1.1.1
-----

- *SECURITY*: Fixed an error that was allowing logged-in users to see
  any page in any tutorial