@@ -1,6 +1,7 @@
 1.2.2
 -----
 
+- *UPDATE*: Update the YouTube embedding functionality (#74)
 - *BUGFIX*: Correctly handle student progress on modules
 - *BUGFIX*: Correctly handle parts with an empty content (#67)
 - *BUGFIX*: Allow editing a module that has been archived (#65)
